--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 
 <style>
-/* RESET & BASE -------------------------------------------------- */
+/* BASE ---------------------------------------------------------- */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow-y:auto;-webkit-overflow-scrolling:touch;user-select:none}
 
@@ -21,11 +21,13 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* BLOCK --------------------------------------------------------- */
-.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.05rem;font-weight:700;letter-spacing:.3px;position:relative;cursor:pointer;background-size:350% 350%;box-shadow:0 12px 30px rgba(0,0,0,.45);overflow:hidden;transition:background-position 4s ease}
+/* MULTI-COLOR BLOCK -------------------------------------------- */
+.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.05rem;font-weight:700;letter-spacing:.3px;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);overflow:hidden;transition:background-position 4s ease}
 .block:hover{background-position:100% 100%}
-.block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.15),transparent 60%);mix-blend-mode:overlay;pointer-events:none;opacity:.65;transition:opacity .4s}
+.block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);mix-blend-mode:overlay;pointer-events:none;opacity:.6;transition:opacity .4s}
 .block:hover::before{opacity:.85}
+
+/* LABEL & FRASE ------------------------------------------------- */
 .label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
 .frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1rem}
 
@@ -37,7 +39,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 .port-text h2{font-size:clamp(2rem,5vw,3.4rem);font-weight:800;line-height:1.1;text-align:center}
 .port-text p{font-size:clamp(.95rem,2vw,1.3rem);font-weight:600;opacity:.9}
 
-/* FADE ANIM */
+/* ANIMS --------------------------------------------------------- */
 @keyframes fadeIn{from{opacity:0;transform:scale(.94)}to{opacity:1;transform:scale(1)}}
 
 /* CTA ----------------------------------------------------------- */
@@ -56,7 +58,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 </head>
 <body>
 
-<div class="intro"><span class="hl">¿Qué </span>sientes?<span class="hl"></span></div>
+<div class="intro"><span class="hl">Respira</span>. Elige una palabra. <span class="hl">En uno de los bloques aparecerá un libro</span>.</div>
 
 <div class="grid" id="grid"></div>
 
@@ -68,31 +70,31 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* ------------ helpers & state ---------------- */
-const grid  = document.getElementById("grid");
-const cta   = document.getElementById("cta");
-const btnOtro  = document.getElementById("otro");
-const btnLibro = document.getElementById("fisico");
-const cele     = document.getElementById("cele");
-const celeMsg  = document.getElementById("celeMsg");
+/* -------- state -------- */
+const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
+      btnOtro=document.getElementById("otro"),btnLibro=document.getElementById("fisico"),
+      cele=document.getElementById("cele"),celeMsg=document.getElementById("celeMsg");
 
-let libro=null,portadaIdx=0,revelado=false;
-const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
-const isURL  = s => /^https?:\/\//i.test((s||"").trim());
-const grad   = h => {
-  const [r,g,b] = [h.slice(1,3),h.slice(3,5),h.slice(5,7)].map(x=>parseInt(x,16));
-  const l = `rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;
-  return `linear-gradient(135deg,${h},${l})`;
-};
+let libro=null,portIdx=0,revelado=false;
+const emojis=["🌞","🌙","⭐","⚡"];
 
-/* ------------ construir portada ------------ */
+/* helpers ------------------------------------------------------- */
+const isURL=s=>/^https?:\/\//i.test((s||"").trim());
+
+function gradientTwo(i){
+  const c1=libro.colores[i];
+  const c2=libro.colores[(i+1)%libro.colores.length];
+  return`linear-gradient(135deg,${c1},${c2})`;
+}
+
+/* Crear portada ------------------------------------------------- */
 function portadaElem(){
   const wrap=document.createElement("div");wrap.className="portada";
   if(isURL(libro.portada)){
     const img=new Image();img.src=libro.portada;wrap.append(img);
   }else{
     const box=document.createElement("div");box.className="port-text";
-    const [t, ...rest]=libro.portada.split('\n');
+    const [t,...rest]=libro.portada.split('\n');
     const h=document.createElement("h2");h.textContent=t;
     const p=document.createElement("p");p.textContent=rest.join(' ');
     box.append(h,p);wrap.append(box);
@@ -100,12 +102,12 @@ function portadaElem(){
   return wrap;
 }
 
-/* ------------ UI render -------------------- */
+/* Render blocks ------------------------------------------------- */
 function render(){
   grid.innerHTML="";
-  libro.palabras.forEach((pal,i)=>{
-    const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=grad(libro.colores[i]);
-    const label=document.createElement("div");label.className="label";label.textContent=`${emojis[i]} ${pal}`;label.style.color=libro.textColors[i];
+  libro.palabras.forEach((word,i)=>{
+    const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=gradientTwo(i);
+    const label=document.createElement("div");label.className="label";label.textContent=`${emojis[i%4]} ${word}`;label.style.color=libro.textColors[i];
     const frase=document.createElement("div");frase.className="frase";frase.textContent=libro.frases[i];frase.style.color=libro.textColors[i];
     const port=portadaElem();
     card.append(label,frase,port);card.onclick=()=>onClick(card);
@@ -113,18 +115,18 @@ function render(){
   });
 }
 
-/* ------------ click logic ------------------ */
+/* Click logic --------------------------------------------------- */
 function onClick(card){
   const i=+card.dataset.i;const [lab,fr,port]=card.children;
-  if(revelado&&i!==portadaIdx)return location.reload();
-  if(!revelado&&i===portadaIdx){
+  if(revelado&&i!==portIdx)return location.reload();
+  if(!revelado&&i===portIdx){
     card.innerHTML="";card.append(port);port.style.display="flex";
     [...grid.children].forEach((c,j)=>{if(j!==i){c.children[0].style.display="none";c.children[1].style.display="flex";}});
     cta.style.display="flex";revelado=true;
   }else if(!revelado){lab.style.display="none";fr.style.display="flex";}
 }
 
-/* ------------ botones ---------------------- */
+/* Botones ------------------------------------------------------- */
 btnOtro.onclick=()=>location.reload();
 
 btnLibro.onclick=async()=>{
@@ -137,13 +139,13 @@ btnLibro.onclick=async()=>{
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
 };
 
-/* ------------ init ------------------------- */
+/* Init ---------------------------------------------------------- */
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
     const data=await r.json();
     libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    portadaIdx=Math.floor(Math.random()*4);
+    portIdx=Math.floor(Math.random()*4);
     render();
   }catch(e){console.error("Error cargando contenido:",e);}
 })();
